--- a/app/src/main/res/drawable/trait_boolean_false.xml
+++ b/app/src/main/res/drawable/trait_boolean_false.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:fillColor="#FF0000"
-      android:pathData="M9,7L11,12L9,17H11L12,14.5L13,17H15L13,12L15,7H13L12,9.5L11,7H9M12,2A10,10 0,0 1,22 12A10,10 0,0 1,12 22A10,10 0,0 1,2 12A10,10 0,0 1,12 2Z"/>
+      android:pathData="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"/>
 </vector>
