--- a/app/src/main/res/xml/preferences_brapi.xml
+++ b/app/src/main/res/xml/preferences_brapi.xml
@@ -22,40 +22,63 @@
             android:title="@string/brapi_authorize" />
 
         <Preference
-            android:icon="@drawable/ic_exit_to_app"
+            android:icon="@drawable/ic_pref_brapi_logout"
             android:key="revokeBrapiAuth"
             android:title="@string/brapi_revoke_auth" />
 
         <EditTextPreference
-            android:icon="@drawable/ic_buffer"
-            android:key="BRAPI_PAGINATION"
             android:defaultValue="1000"
-            android:title="@string/brapi_pagination"/>
+            android:icon="@drawable/ic_pref_brapi_pagination"
+            android:inputType="number"
+            android:key="BRAPI_PAGINATION"
+            android:selectAllOnFocus="true"
+            android:title="@string/brapi_pagination" />
+
+        <EditTextPreference
+            android:defaultValue="120"
+            android:icon="@drawable/ic_pref_brapi_timeout"
+            android:inputType="number"
+            android:key="BRAPI_TIMEOUT"
+            android:selectAllOnFocus="true"
+            android:title="@string/brapi_timeout" />
 
     </PreferenceCategory>
 
     <PreferenceCategory
         android:key="brapi_server_list"
         android:title="@string/preferences_brapi_servers_title"
-        app:iconSpaceReserved="false">
+        app:iconSpaceReserved="false"
+        app:initialExpandedChildrenCount="1">
 
         <Preference
             android:icon="@drawable/ic_trait_barcode"
             android:key="brapi_server_barcode"
-            android:title="@string/preferences_brapi_server_barcode">
-        </Preference>
+            android:title="@string/preferences_brapi_server_barcode" />
 
         <Preference
             android:icon="@drawable/ic_pref_brapi_server"
             android:key="brapi_server_cassavabase"
-            android:title="@string/preferences_brapi_server_cassavabase">
-        </Preference>
+            android:title="@string/preferences_brapi_server_cassavabase" />
+
+        <Preference
+            android:icon="@drawable/ic_pref_brapi_server"
+            android:key="brapi_server_t3_wheat"
+            android:title="@string/preferences_brapi_server_t3_wheat" />
+
+        <Preference
+            android:icon="@drawable/ic_pref_brapi_server"
+            android:key="brapi_server_t3_oat"
+            android:title="@string/preferences_brapi_server_t3_oat" />
+
+        <Preference
+            android:icon="@drawable/ic_pref_brapi_server"
+            android:key="brapi_server_t3_barley"
+            android:title="@string/preferences_brapi_server_t3_barley" />
 
         <Preference
             android:icon="@drawable/ic_pref_brapi_server"
             android:key="brapi_server_default"
-            android:title="@string/preferences_brapi_server_test">
-        </Preference>
+            android:title="@string/preferences_brapi_server_test" />
 
         <Preference
             android:icon="@drawable/ic_pref_brapi_server_add"
@@ -64,7 +87,7 @@
 
             <intent
                 android:action="android.intent.action.VIEW"
-                android:data="https://github.com/PhenoApps/Field-Book/issues/new?assignees=&amp;labels=enhancement%2C+feature+request&amp;template=feature_request.md&amp;title=%5BREQUEST%5D"/>
+                android:data="https://github.com/PhenoApps/Field-Book/issues/new?assignees=&amp;labels=enhancement%2C+feature+request&amp;template=feature_request.md&amp;title=%5BREQUEST%5D" />
         </Preference>
     </PreferenceCategory>
 </PreferenceScreen>
