--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,4 +97,15 @@
         <item name="colorControlNormal">#343434</item>
     </style>
 
+    <style name="BrapiImportServerTextView">
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="BrapiImportTextView">
+        <item name="android:background">@color/main_primaryDark</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">28sp</item>
+    </style>
+
 </resources>
