--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -99,13 +99,13 @@
 
     <style name="BrapiImportServerTextView">
         <item name="android:gravity">center</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/text_size_medium</item>
     </style>
 
     <style name="BrapiImportTextView">
         <item name="android:background">@color/main_primaryDark</item>
         <item name="android:gravity">center</item>
-        <item name="android:textSize">28sp</item>
+        <item name="android:textSize">@dimen/text_size_xlarge</item>
     </style>
 
 </resources>
