--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -77,4 +77,9 @@
         <item>@string/preferences_brapi_version_v1</item>
         <item>@string/preferences_brapi_version_v2</item>
     </string-array>
+
+    <string-array name="pref_brapi_oidc_flow">
+        <item>@string/preferences_brapi_oidc_flow_oauth_implicit</item>
+        <item>@string/preferences_brapi_oidc_flow_old_custom</item>
+    </string-array>
 </resources>
