gnss init commit added big decimal implementation for precise gnss measurement recording

--- a/app/src/main/res/layout/activity_collect.xml
+++ b/app/src/main/res/layout/activity_collect.xml
@@ -364,6 +364,11 @@
                 android:layout_height="wrap_content" />
 
             <include
+                layout="@layout/trait_gnss"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"/>
+
+            <include
                 layout="@layout/trait_angle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
