--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,4 +97,13 @@
         <item name="colorControlNormal">#343434</item>
     </style>
 
+    <style name="TextHeader" parent="TextAppearance.AppCompat">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18dp</item>
+    </style>
+
+    <style name="TextData" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">18dp</item>
+    </style>
+
 </resources>
