--- a/app/src/main/res/layout/listitem_search_results.xml
+++ b/app/src/main/res/layout/listitem_search_results.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:textSize="@dimen/text_size_medium" />
+        android:textSize="@dimen/text_size_large" />
 
     <TextView
         android:id="@+id/plot"
@@ -18,6 +18,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:textSize="@dimen/text_size_medium" />
+        android:textSize="@dimen/text_size_large" />
 
 </LinearLayout>   
